deployments/k8s/ingress/traefik/cors.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cors
  namespace: realtime-app
spec:
  headers:
    accessControlAllowMethods:
      - "POST"
      - "GET"
      - "OPTIONS"
      - "PUT"
      - "DELETE"
    accessControlAllowOriginList:
      - "*"
    accessControlAllowHeaders:
      - grpc-timeout
      - content-type
      - keep-alive
      - user-agent
      - cache-control
      - content-type
      - content-transfer-encoding
      - custom-header-1
      - x-accept-content-transfer-encoding
      - x-accept-response-streaming
      - x-user-agent
      - x-grpc-web
    accessControlMaxAge: 100
    addVaryHeader: true
