deployments/k8s/ingress/traefik/web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: realtime-app
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: realtime-app-cors@kubernetescrd
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: web.realtime
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
